# bern_rtos_blink_example

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
conf/: Cargo.toml  conf.rs
src/: main.rs
