[package]
authors = ["Matteo Rango <rango.matteo@icloud.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f4_rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
dht11 = "0.3.1"

[dependencies.stm32f4xx-hal]
features = ["stm32f407"]
version = "0.20.0"

[[bin]]
name = "stm32f4_rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
